AM_CFLAGS += -Wall -O3 -funroll-loops -fstrict-aliasing

bin_PROGRAMS = spuremd
spuremd_SOURCES = grid.c list.c lookup.c print_utils.c \
		  reset_utils.c restart.c random.c traj.c \
		  vector.c allocate.c analyze.c box.c system_props.c \
		  param.c pdb_tools.c neighbors.c GMRES.c QEq.c bond_orders.c \
		  single_body_interactions.c two_body_interactions.c \
		  three_body_interactions.c four_body_interactions.c forces.c \
		  integrate.c init_md.c testmd.c 
